<resources>
    <string name="app_name">SwApp</string>
    <string name="climate">Climate</string>
    <string name="planet">Planet</string>
    <string name="terrain">Terrain</string>
    <string name="population">Population</string>
    <string name="film">Film</string>
    <string name="description">Description</string>
    <string name="director">Director</string>
    <string name="star_wars">Star Wars</string>
    <string name="person">Person</string>
    <string name="gender">Gender</string>
    <string name="skin_color">Skin Color</string>
    <string name="planets">Planets</string>
    <string name="films">Films</string>
    <string name="people">People</string>
</resources>