<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/principal_nav_graph"
    app:startDestination="@id/principalFragment">

    <fragment
        android:id="@+id/principalFragment"
        android:name="com.cylit.swapp.ui.PrincipalFragment"
        android:label="Home"
        tools:layout="@layout/fragment_principal">
        <action
            android:id="@+id/actionPlanets"
            app:destination="@id/planetsFragment" />
        <action
            android:id="@+id/actionIrAFilms"
            app:destination="@id/filmFragment" />
        <action
            android:id="@+id/actionPeople"
            app:destination="@id/peopleFragment" />
    </fragment>
    <fragment
        android:id="@+id/planetsFragment"
        android:name="com.cylit.swapp.ui.PlanetsFragment"
        android:label="@string/planets"
        tools:layout="@layout/fragment_planets" />
    <fragment
        android:id="@+id/filmFragment"
        android:name="com.cylit.swapp.ui.FilmsFragment"
        android:label="@string/films"
        tools:layout="@layout/fragment_films">
        <action
            android:id="@+id/actionFilmDetail"
            app:destination="@id/filmDetailFragment"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/peopleFragment"
        android:name="com.cylit.swapp.ui.PeopleFragment"
        android:label="@string/people" />
    <fragment
        android:id="@+id/filmDetailFragment"
        android:name="com.cylit.swapp.ui.FilmDetailFragment"
        android:label="Film Detail">
        <argument
            android:name="film"
            app:argType="com.cylit.swapp.model.FilmDetailDto" />
        <action
            android:id="@+id/actionLike"
            app:destination="@id/successFragment"
            app:enterAnim="@anim/zoom_in"
            app:exitAnim="@anim/no_change" />
        <action
            android:id="@+id/actionNoLike"
            app:destination="@id/noSuccessFragment"
            app:enterAnim="@anim/zoom_in"
            app:exitAnim="@anim/no_change" />

    </fragment>
    <fragment
        android:id="@+id/successFragment"
        android:name="com.cylit.swapp.ui.SuccessFragment"
        android:label="Film Detail">
        <action
            android:id="@+id/actionSuccess"
            app:destination="@id/filmFragment"
            app:popUpTo="@id/filmFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/noSuccessFragment"
        android:name="com.cylit.swapp.ui.NoSuccessFragment"
        android:label="Film Detail">
        <action
            android:id="@+id/actionSuccesNoLike"
            app:destination="@id/filmFragment"
            app:popUpTo="@id/filmFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>